--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
     <title>Conect v5</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="google-signin-client_id" content="678138738906-d6anev7k5ch1h8dgc46v0cpj1dsphe2s.apps.googleusercontent.com">
+    <script src="https://apis.google.com/js/platform.js"></script>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <!-- Favicon icon -->
     <link rel="icon" type="image/png" sizes="16x16" href="./assets/images/favicon.png">
@@ -45,7 +47,7 @@
     <script src="./assets/plugins/sticky-kit-master/dist/sticky-kit.min.js"></script>
     <script src="./assets/plugins/sparkline/jquery.sparkline.min.js"></script>
     <!--Custom JavaScript -->
-    <script src="./assets/js/custom.min.js"></script>
+    <script src="./assets/js/custom.js"></script>
 
 </body>
 
